K8S/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
      metadata:
        labels:
          app: mssql
      spec:
        securityContext:
          fsGroup: 10001
          runAsUser: 10001
          runAsGroup: 10001
        containers:
          - name: mssql
            image: mcr.microsoft.com/mssql/server:2022-latest
            resources:
              limits:
                memory: "2Gi"
                cpu: "500m"
            ports:
            - containerPort: 1433
            volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
        volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mysql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433

        

    
#kubectl create secret generic mssql --from-literal=SA_PASSWORD="StrongP@ssw0rd"
#kubectl apply -f .\mssql-plat-depl.yaml
#kubectl get pods
#kubectl logs <pod name> -c fix-permissions
#kubectl describe pod <pod name>
#kubectl rollout restart deployment mssql-depl
#kubectl delete pod <pod name>
#kubectl exec -it <pod name> -- nslookup mssql-clusterip-srvcls

#kubectl get svc mssql-loadbalancer
