K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8000
      targetPort: 8080

      #kubectl apply -f platforms-np-srv.yaml
      #kubectl get svc
      #kubectl delete service platformservice-srv
